--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sportpoznan",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amiskiewiczpl.github.io/sportpoznan",
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
