--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://amiskiewiczpl.github.io/sportpoznan",
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "firebase": "^12.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
